src/scss/main.scss
/* ... */
h1 {
	font-family: NunitoSansBold, sans-serif;
	color: $brand-blue;
	font-size: $big;
	text-transform: uppercase;
  margin-top: $standard-margin;
}
h2 {
	font-family: NunitoSansBold, sans-serif;
	color: $brand-blue;
	font-size: 18px;
	text-transform: uppercase;
	//margin-top: $standard-margin;
	margin-top: 0;
	margin-bottom: $standard-margin;
}
h3 {
	font-family: NunitoSansBold, sans-serif;
	color: $brand-body;
	font-size: $body-size;
	margin-top: $standard-margin;
}
strong {
	font-family: NunitoSansBold, sans-serif;
}

@mixin mq($size) {
  @if $size == xs {
    @media (max-width: 767px) { @content; }
  }
  @if $size == sm {
    @media (min-width: 768px) { @content; }
  }
  @else if $size == md {
    @media (min-width: 992px) { @content; }
  }
  @else if $size == lg {
    @media (min-width: 1200px)  { @content; }
  }
}

@mixin ir() {
	background-position: top left;
	background-repeat: no-repeat;
	background-size: 100%;
	text-indent: -9999px;
}

// General

html, body {
	width: 100%;
}

body {
	background-color: $brand-white;
	font-family: NunitoSansLight, sans-serif;
	font-size: $body-size;
	line-height: 1.22em;
	color: $brand-body;
	overflow-x: hidden;
	padding-top: 51px;
	padding-bottom: 0;
	@include mq(sm){
		padding-top: 60px;
	}
	@include mq(md){
		padding-top: 75px;
	}
	@include mq(lg){
		padding-top: 100px;
	}
	a {
		color: $brand-body-link;
		font-family: 'NunitoSansSemiBold';
		text-decoration: none;
		&:hover {
			color: $brand-body-link-hover;
			text-decoration: none;
		}
	}
}

p, ul, ol, blockquote, h1, h2, h3, .video-responsive {
	margin-bottom: $standard-margin;
}

ul {
	li {
		margin-bottom: 10px;
	}
	li:last-child {
		margin-bottom: 0;
	}
}

// Navigation

nav {
	border: 0;
}
.navbar {
	@include mq(lg) {
		.container {
			width: 955px;
		}

	}
}
.navbar-toggle {
	cursor: pointer;
	float: left;
}

.icon-bar {
	background-color: $brand-blue ;
}

.nav-logo {
	background-image: url('../img/ddd-logo-blue.svg');
	height: 46px;
	width: 160px;
	@include ir();
	@include mq(xs) {
		margin: 7px auto 0px auto;
	}
	@include mq(sm) {
		height: 39px;
		margin: 8px 0 0 0;
		width: 144px;
	}
	@include mq(md) {
		margin: 3px auto;
		height: 48px;
		margin: 13px 0 0 0;
		width: 180px;
	}
	@include mq(lg) {
		height: 62px;
		margin: 0 0 0 0;
		width: 230px;
	}
}

.nav-list {
	display: block;
	list-style-type: none;
	margin: 0 auto;
	padding: 0;
	@include mq(sm) {
		display: inline-block;
		padding-left: 15px;
	}
	@include mq(md) {
		padding-left: 25px;
	}
	@include mq(lg) {
		padding-left: 25px;
	}
}

.nav-list-item {
	position: relative;
	text-align: left;
	transition: color 0.2s;
	@include mq(xs) {
		font-size: 14px;
	}
	@include mq(sm) {
		display: inline-block;
		font-size: 14px;
		text-align: center;
	}
	@include mq(md) {
		font-size: $body-size;
	}

	a {
		color: $brand-blue; //not working
		cursor: pointer;
		text-decoration: none;
		&:hover {
			color: $brand-nav-hover;
		}
	}
	&:not(:first-child) {
		@include mq(sm){
			padding-left: 5px;
		}
		@include mq(md){
			padding-left: 10px;
		}
		@include mq(lg){
			padding-left: 20px;
		}
	}
	&:last-child {
		line-height: normal;
		a {
			color: $brand-white;
			margin-bottom: 0;
			@include mq(xs){
				display: block;
				font-size: 14px;
			}
			@include mq(sm) {
				font-size: 14px;
				margin-top: -2px;
			}
			@include mq(md) {
				font-size: $body-size;
			}
			//Not quite sure why (lg) doesnt have to be defined here to inherent (md) rule
		}
	}
}

.nav-btn {
	@extend %btn;
	@include mq(xs) {
		margin-top: $half-margin;
		font-size: 14px;
	}
	@include mq(sm) {
		display: inline-block;
		font-size: 14px;
		margin-left: 20px;
		float: right;
	}
	@include mq(md) {
		font-size: $body-size;
	}
	@include mq(lg) {

	}
}

.navbar {
	text-align: center;
	margin-bottom: 0;
	.not-container {
		@include mq(xs) {
			padding-left: 15px;
			padding-right: 15px;
		}
		@include mq(sm) {
			display: inline-block;
		}
		.navbar-header {
			@include mq(sm) {
				display: inline-block;
				a {
					display: inline-block;
					margin-top: 2px;
				}
			}
			@include mq(lg) {
				a {
					display: inline-block;
					margin-top: 20px;
				}
			}
		}
		#navbar {
			@include mq(sm) {
				display: inline-block !important;
			}
		}
	}
	background: $brand-white;
	font-family: NunitoSansSemiBold, sans-serif;
	li {
		a {
			color: $brand-blue;
		}
	}
	@include mq(sm){
		height: 60px;
	}
	@include mq(md){
		height: 75px;
	}
	@include mq(lg){
		height: 100px;
	}
}

.navbar-collapse {
	text-align: center;
	padding-bottom: $half-margin;
	@include mq(sm) {
		background: transparent;
		text-align: center;
	}
}

.nav-list {
	@include mq(xs) {
		margin-top: $half-margin;
		//visibility: hidden;
	}
	@include mq(sm) {
		position: relative;
		top: 15px;
		margin-top: 0;
	}
	@include mq(md) {
		margin-top: 5px;
		margin-left: 20px;
	}
	@include mq(lg) {
		margin-left: 50px;
		margin-top: $half-margin;
	}

}
.nav-list-item:not(:first-child) {
  .nav-submenu {
    @include mq(sm) {
      left: 10px;
    }
  }
}

.section {
	.row {
		margin: 0 auto;
		max-width: 960px;
	}

	&.speakers {
		text-align: center;
	}
}

.speakers {
	text-align: center;
}

.register-copy {
	display: inline-block;
	margin-top: 85px;
	padding: $standard-margin;
  @include mq(sm) {
    margin-left: 60px;
  }
  @include mq(md) {
    margin-left: 100px;
	}
	h1 {
		color: $brand-white;
		font-family: NunitoSansExtraBold, sans-serif;
		font-size: 30px;
		margin: 0;
		text-transform: uppercase;
		@include mq(sm){
			font-size: 40px;
		}
	}
	p {
		color: $brand-white;
		font-family: NunitoSansExtraBold, sans-serif;
		font-size: 16px;
		line-height: 1em;
		margin: 0;
		max-width: 320px;
		@include mq(sm){
			font-size: 30px;
		}
	}
}

.register-copy {
	background-color: rgba(0,164,228, 0.75);
}
.alteryx-copy {
	@include mq(sm) {
		width: 500px;
	}
	h1 {
		a {
			font-size: 40px;
			color: #0082CD;
		}
	}
}
/* ... */

